7/18/14 #69 BarNode: fix vertical position whenever bar changes, wire up to numberOfAtomsProperty after VBox.call
7/18/14 #69 eliminate unnecessary computation of atom counts in BarChartsNode, clean up
7/18/14 add horizontal strut to BarNode, to prevent things from shifting horizontally when #atoms is zero vs non-zero
7/18/14 #69 move responsibility for observing Equation.balanced into EqualityOperatorNode
7/18/14 #69 move responsibility for observing equation terms into BoxNode
7/18/14 clean up wiring of coefficients observer
7/18/14 move responsibility for observing Equation.balanced into RightArrowNode
7/18/14 wire BCEFaceNode to Equation.balancedProperty instead of coefficients
7/18/14 #78 Equation: don't call observer until it has been added to all coefficients
7/16/14 #69 make BarNode mutable (but not used yet in BarChartsNode)
7/16/14 game: order equations in pools so that layout special-cases are at the beginning of the pools, to simplify testing
7/16/14 move utility for counting atoms from Equation to AtomCount
7/16/14 delete Equation.createName, specify names in IntroductionModel
7/16/14 inherit(Object,AtomCount)
7/16/14 make Equation.setAtomCounts private static
7/16/14 doc and renaming in BarChartsNode
7/16/14 clean up vertical positioning of BarChartsNode
7/16/14 move happy-face logic into BCEFaceNode
7/16/14 clean up vertical positioning of BalanceScalesNode
7/16/14 clean up BoxNode and BoxesNode
7/16/14 clean up BarNode
7/16/14 clean up FulcrumNode
7/16/14 simplify how equation interactivity is disabled in the game, use pickable:false
7/16/14 #77 balance scale: specify {transformBounds:true} for beam and pile of atoms, so that bounds are accurate for layout
7/15/14 #29 factor out duplicate code in GameFeedbackDialog
# 1.0.0-dev.9 7/15/14
7/15/14 #77 add debug code for shown bounds of the 'balance scales' representation
7/14/14 fix in GameModel.startGame: reset currentEquationIndex before using it to choose currentEquation